Fixed header position
Header was overlapping landing page row in Projects. This is the fix.

--- a/assets/CSS/style-header.css
+++ b/assets/CSS/style-header.css
@@ -4,10 +4,16 @@
   display: flex;
   flex-direction: row;
   height: 100px;
+}
+
+#header {
   font-size: 20px;
   font-family: arial;
+  position: fixed;
+  width: 100%;
+  top: 0px;
   margin: 0px;
-  color: #ffffff;
+  color: white;
   background-color: #eb1111;
   text-align: center;
 }
@@ -53,7 +59,7 @@ div.main-img {
   display: flex;
   flex-direction: row;
   margin: 0px;
-  height: 480px;
+  height: 575px;
   background-color: #11ebeb;
   align-items: center;
 }
