--- a/assets/CSS/style-project.css
+++ b/assets/CSS/style-project.css
@@ -14,6 +14,8 @@
 .project-row-landing {
   display: flex;
   flex-direction: row;
+  padding-top: 90px;
+
   height: 600px;
   margin: 0px;
   background-color: rgb(11, 109, 37);
@@ -72,6 +74,8 @@
   flex-direction: row;
   background-color: #00037d;
   width: 100%;
+  margin: 0px;
+  height: 100%;
 }
 
 .project-row2-b {
